--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-9.0.1">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre-9.0.1">
 		<attributes>
 			<attribute name="module" value="true"/>
 			<attribute name="owner.project.facets" value="java"/>
@@ -14,10 +14,10 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="D:/java/git/DB04/web/WEB-INF/lib/javax.servlet-3.0.jar"/>
-	<classpathentry kind="lib" path="D:/java/git/DB04/web/WEB-INF/lib/jaxb-xjc.jar"/>
-	<classpathentry kind="lib" path="D:/java/git/DB04/web/WEB-INF/lib/junit-4.3.jar"/>
-	<classpathentry kind="lib" path="D:/java/git/DB04/web/WEB-INF/lib/log4j-1.2.16.jar"/>
-	<classpathentry kind="lib" path="D:/java/git/DB04/web/WEB-INF/lib/mysql-connector-java-5.1.45-bin.jar"/>
+	<classpathentry kind="lib" path="E:/java/projects/from git/task05/WebContent/WEB-INF/lib/javax.servlet-3.0.jar"/>
+	<classpathentry kind="lib" path="E:/java/projects/from git/task05/WebContent/WEB-INF/lib/jaxb-xjc.jar"/>
+	<classpathentry kind="lib" path="E:/java/projects/from git/task05/WebContent/WEB-INF/lib/junit-4.3.jar"/>
+	<classpathentry kind="lib" path="E:/java/projects/from git/task05/WebContent/WEB-INF/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="E:/java/projects/from git/task05/WebContent/WEB-INF/lib/mysql-connector-java-5.1.45-bin.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
