--- a/src/db.properties
+++ b/src/db.properties
@@ -1,6 +1,6 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/tourfirm1?autoReconnect=true&useSSL=false
+url=jdbc:mysql://localhost:3306/tourfirm?autoReconnect=true&useSSL=false
 user=root
-password=12345
+password=root
 minPool=5
 maxPool=50
